2007-10-26  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Add libetpan.
	* configure.ac: Add libetpan package.
	* include/config.nsi.in: Add support for libetpan.
	* src/Makefile.am (EXTRA_DIST): Add inst-libetpan.nsi and
	uninst-libetpan.nsi.
	(gpg4win_spkgs): Add libetpan.
	(gpg4win_pkg_libetpan_configure): New variable.
	* src/uninst-libetpan.nsi, src/inst-libetpan.nsi: New files.
	* src/gpg4win.mk.in: Invoke configure with relative path to make
	it easier on some packages (in particular libetpan).
	(SETVRS): Add install bin directory to PATH.

2007-10-29  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update to libgpg-error 1.6.

2007-10-26  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update to libgcrypt 1.3.1.

2007-10-22  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Updated gpgol.

2007-10-18  Marcus Brinkmann  <marcus@g10code.de>

	* src/g4wihelp.c (read_w32_registry_string): New function.
	(ENV_HK, ENV_REG): New macros.
	(path_add, path_remove): New functions.
	* src/gpg4win.nsi: Remove GpgEX from light installer.
	* src/installer.nsi (AddToPath, RemoveFromPath): Rewritten.

2007-10-17  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-kleopatra.nsi: Add DESC_Menu_kleopatra language string.
	* src/inst-sections.nsi: Install kleopatra links.
	* src/installer-finish.nsi: Uninstall kleopatra.
	* configure.ac: Make pinentry dependent on gtk+ instead of glib.
	* src/Makefile.am (gpg4win_pkg_pinentry_configure): Revert last
	change.
	* src/inst-pinentry.nsi: Revert last change.

2007-10-17  Werner Koch  <wk@g10code.com>

	* src/inst-kdesupport.nsi: Remove libeay32.dll and ssleay32/dll;
	they seems not to be necessary and conflict with the GPL anyway.

	* src/inst-gpgol.nsi: s/GPGol/GpgOL/.

	* src/inst-pinentry.nsi: Install native pinentry.
	* src/Makefile.am: Disable pinnetry-gtk-2 for now.
	* configure.ac: Make pinentry depend on glib.

2007-10-17  Marcus Brinkmann  <marcus@g10code.de>
