@@ -39,8 +39,8 @@ Section "-un.kleopatra"
   Delete "$INSTDIR\libgpgme++-glib.dll"
   Delete "$INSTDIR\libgpgme++-qt.dll"
   Delete "$INSTDIR\libgpgme++.dll"
-  Delete "$INSTDIR\libkleo.dll"
   Delete "$INSTDIR\libqgpgme.dll"
+  Delete "$INSTDIR\libkleo.dll"
 
   Delete "$INSTDIR\share\applications\kde4\kleopatra_import.desktop"
 
